[package]
name = "ramd-processor"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
description = ""

[dependencies]
ramd-db.workspace = true
ramd-vm.workspace = true
ramd-vm-runtime.workspace = true

eyre.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
