[package]
name = "ramd-vm"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
description = ""

[dependencies]
ramd-db.workspace = true

eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
wasmer.workspace = true
sha3.workspace = true
hex.workspace = true
