[package]
name = "ramd-vm"
authors = ["Jihoon Song <jihoonsong.dev@gmail.com>"]
version.workspace = true
edition.workspace = true
license = "GPLv3"
description = ""

[dependencies]
ramd-db.workspace = true

eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
wasmer.workspace = true
sha3.workspace = true
hex.workspace = true
